--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/ic_background_dark"
-    tools:context=".Start">
+    tools:context=".login.Start">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
