--- a/app/src/main/res/layout/profile_detail.xml
+++ b/app/src/main/res/layout/profile_detail.xml
@@ -51,6 +51,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="96dp"
         android:text="MIS PRODUCTOS PUBLICADOS"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
