--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -5,14 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".app.SettingsFragment"
-    android:background="@drawable/ic_background_light">
+    android:background="@color/textPrimary">
 
     <!-- TODO: Update blank fragment layout -->
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:background="@drawable/ic_background_light">
 
         <ImageView
             android:id="@+id/imageView2"
@@ -26,6 +27,7 @@
 
         <LinearLayout
             android:id="@+id/linearLayout"
+            style="@style/TextViewLight"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
@@ -36,27 +38,33 @@
 
             <TextView
                 android:id="@+id/textView4"
+                style="@style/TextViewLight"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="32dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginRight="32dp"
                 android:text="Opción 1"
                 android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/textView5"
+                style="@style/TextViewLight"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="32dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginRight="32dp"
                 android:text="Opción 2"
                 android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/textView6"
+                style="@style/TextViewLight"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="32dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginRight="32dp"
                 android:text="Opción 3"
                 android:textSize="18sp" />
@@ -64,9 +72,10 @@
 
         <TextView
             android:id="@+id/textView7"
+            style="@style/TextViewLight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="256dp"
+            android:layout_marginTop="128dp"
             android:layout_marginBottom="32dp"
             android:text="Powered by"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -76,6 +85,7 @@
 
         <TextView
             android:id="@+id/textView8"
+            style="@style/TextViewLight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -86,12 +96,10 @@
 
         <TextView
             android:id="@+id/textView9"
+            style="@style/TextViewLight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="32dp"
             android:text="Alex Velázquez Fernández"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView8" />
