--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".product.ProductDetailFragment">
+    tools:context=".product.ProductDetailFragment"
+    android:background="@color/textPrimary">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -12,7 +13,7 @@
         android:background="@drawable/ic_background_light" >
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/imageViewUser"
             android:layout_width="320dp"
             android:layout_height="250dp"
             android:layout_marginTop="24dp"
@@ -60,7 +61,7 @@
             android:text="Descripción"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+            app:layout_constraintTop_toBottomOf="@+id/imageViewUser" />
 
         <Button
             android:id="@+id/buttonEdit"
