--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:shadowDx="10"
             android:text="LOG IN"
-            android:textColor="@color/textPrimary"
+            android:textColor="@color/colorAccent"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:shadowDx="10"
             android:text="SIGN IN"
-            android:textColor="@color/textPrimary"
+            android:textColor="@color/colorAccent"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
