--- a/app/src/main/res/menu/bottom_bar.xml
+++ b/app/src/main/res/menu/bottom_bar.xml
@@ -7,6 +7,11 @@
         android:title="Home"/>
 
     <item
+        android:id="@+id/navigation_favs"
+        android:icon="@drawable/ic_star"
+        android:title="Favoritos"/>
+
+    <item
         android:id="@+id/navigation_publish"
         android:icon="@drawable/ic_add"
         android:title="Publicar"/>
