--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="colorPrimary">#E96394</color>
+    <color name="colorError">#682F44</color>
     <color name="colorPrimaryDark">#3D3D3D</color>
-    <color name="colorAccent">#DFA9BE</color>
-    <color name="textPrimary">#FFFFFF</color>
-    <color name="textSecondary">#3D3D3D</color>
+    <color name="colorAccent">#FFFFFF</color>
+    <color name="colorAccent50">#80FFFFFF</color>
+    <color name="colorAccentSecondary">#DFA9BE</color>
+
+    <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">#80FFFFFF</color>
+
 </resources>
