--- a/app/src/main/res/layout/fragment_publish_product.xml
+++ b/app/src/main/res/layout/fragment_publish_product.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".product.ProductDetailFragment"
-    android:background="@color/textPrimary">
+    android:background="@color/colorAccent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
             android:layout_width="320dp"
             android:layout_height="250dp"
             android:layout_marginTop="24dp"
-            android:background="@color/textPrimary"
+            android:background="@color/colorAccent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +41,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColorLink="@color/textPrimary" />
+                android:textColorLink="@color/colorAccent" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
