--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,6 +7,17 @@
     android:layout_height="match_parent"
     android:background="@color/colorAccent" >
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/ic_background_light">
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageViewProduct"
         android:layout_width="120dp"
@@ -25,7 +36,7 @@
 
     <TextView
         android:id="@+id/tvName"
-        style="@style/TextViewDark"
+        style="@style/TextViewLight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -48,7 +59,7 @@
 
     <TextView
         android:id="@+id/textView2"
-        style="@style/TextViewDark"
+        style="@style/TextViewLight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
