some more visual fixes

--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -14,7 +14,7 @@
 
 
         <ImageView
-            android:id="@+id/imageViewProduct"
+            android:id="@+id/imageViewPublishProduct"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:src="@drawable/ic_poop_cool"
