--- a/app/src/main/res/layout/product_list.xml
+++ b/app/src/main/res/layout/product_list.xml
@@ -10,17 +10,31 @@
     android:layout_marginBottom="1dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/imageViewProduct"
+        android:id="@+id/imageViewPublishProduct"
         android:layout_width="96dp"
         android:layout_height="96dp"
-        android:src="@drawable/image_default"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="1dp"
         android:layout_marginBottom="1dp"
+        android:src="@drawable/ic_picture_default"
         app:civ_border_color="#00FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <TextView
+        android:id="@+id/textViewPName"
+        style="@style/TextViewLight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="16dp"
+        android:text="Product"
+        android:textSize="18sp"
+        app:layout_constraintStart_toEndOf="@+id/imageViewPublishProduct"
         app:layout_constraintTop_toTopOf="parent" />
 
 
@@ -37,16 +51,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textViewPName"
-        style="@style/TextViewDark"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="16dp"
-        android:text="Product"
-        android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/imageViewProduct"
-        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
