--- a/app/src/main/res/layout/fragment_publish_product.xml
+++ b/app/src/main/res/layout/fragment_publish_product.xml
@@ -12,18 +12,26 @@
         android:layout_height="match_parent"
         android:background="@drawable/ic_background_light" >
 
-        <ImageView
-            android:id="@+id/imageViewUser"
-            android:layout_width="320dp"
-            android:layout_height="250dp"
-            android:layout_marginTop="24dp"
-            android:background="@color/colorAccent"
-            app:layout_constraintBottom_toBottomOf="parent"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
+            android:layout_width="300dp"
+            android:layout_height="200dp"
+            android:layout_marginTop="32dp"
+            app:cardCornerRadius="16dp"
+            app:cardElevation="0dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0"
-            app:srcCompat="@drawable/image_default" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/imageViewProductPublish"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/colorAccent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_picture_add" />
+
+        </androidx.cardview.widget.CardView>
 
 
         <com.google.android.material.textfield.TextInputLayout
@@ -31,12 +39,12 @@
             style="@style/OutlinedInputText"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="32dp"
             android:hint="@string/hint_product_name"
             app:counterMaxLength="20"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageViewUser">
+            app:layout_constraintTop_toBottomOf="@+id/cardView">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
