--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -44,7 +44,7 @@
                 android:layout_marginLeft="32dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginRight="32dp"
-                android:text="Opción 1"
+                android:text="Cerrar sesión"
                 android:textSize="18sp" />
 
             <TextView
